fix: align reports icon

--- a/src/extension/features/toolkit-reports/index.css
+++ b/src/extension/features/toolkit-reports/index.css
@@ -1,5 +1,6 @@
 .nav-main .tk-react-reports-link {
   cursor: pointer;
+  display: 'flex';
 }
 
 .nav-main .tk-react-reports-link.active a .flaticon {
